List module layers parents-first, and independently of which layers are named
findLayerOrder appended each layer before recursing into its parents, so the
layer order came out child-before-parent, the reverse of the delegation order a
child layer's classloaders actually follow. It also used a fresh visited set per
top-level layer, so a layer named directly and also reached through a child's
parents was pushed twice, and the deduplication that ran later kept whichever
copy came first -- which made the resulting order depend on whether the caller
had named a redundant parent layer alongside its child.

Appending each layer only after its parents, with one visited set shared across
all the top-level layers, gives a stable parent-first order: a layer lands in
the same position whether it was named directly or reached through a child.

Also ask, in the classgraph-classpath README, that classloader maintainers
expose the full classpath through a public accessor, since the JDK's native
access warning is scheduled to become a hard error, at which point Narcissus
will not load without a commandline flag either.